src/less/style.less
// main layout styling
html,
body {
  margin: 0;
  padding: 0;
  font-size: 1.05em;
  height: 100%;
}

#wrap {
  min-height: 100%;
  position: relative;
  padding-bottom: (40 + @footer-top-padding * 2 + @footer-height);
  padding-top: 50px;
}

footer, header {
  font-family: 'Dosis', sans-serif;
  color: white;
  background: #141414;

  a {
    color: #DDDDDD;
    &:hover {
      color: #FFFFFF;
      text-decoration: none;
    }

    &.social {
      font-size: 1.85em;
    }
  }
  ul, li {
    margin-bottom: 0;
    display: inline;
  }
  li {
    margin: 0 0.55em;
  }

  .social > .title {
    padding-left: 0.3em;
    font-size: 0.9em;
    display: none;
  }
}

header {
  .icon-bar {
    background-color: #DDD;
    &:hover {
      background-color: #FFF;
    }
  }

  .navbar-right > li {
    margin: 0;
  }

  @media (max-width: @screen-sm-min) {
    .social > .title {
      display: inline;
    }
    .navbar-right > li {
      border-bottom: 1px #333 solid;
    }
  }
}

footer {
  padding: @footer-top-padding 0;
  position:absolute;
  bottom:0;
  width: 100%;
  text-align: center;
}

h1 {
  text-transform: capitalize;
  text-align: center;

}

h4, h5, h6 {
  margin-top: 0px;
}

ul, ol {
  margin-left:0;
  margin-right: -1.5em;
  padding-left:1.5em;
  position:relative;
  left:-1.5em;
}

hr {
  margin-bottom: 2.5em;
  margin-top: 2.5em;
  max-width: 400px;
}

.btn,
.nav > li > a,
.nav-pills > li > a {
  &:hover {
    background-color: transparent;
  }
  font-family: 'Dosis', sans-serif;
}

.nav > li > a {
  padding: 7px 10px;
}

.center {
  text-align: center;
}
.justify {
  text-align: justify;
}

@vertical-height: 400px;
.vertical-center-parent {
  position: relative;
}
.vertical-center {
  height: @vertical-height;
  margin-top: (@vertical-height / -2);
  position: absolute;
  top: 50%;
}

@footer-height: 80px;
@footer-top-padding: 15px;

@slalom-blue: #003a63;
.slalom {
  color: white;
  font-size: @font-size-large;
  background-color: @slalom-blue;
  padding-top: 10px;
  padding-bottom: 10px;

  @slalom-shadow-blur: 5px;
  @slalom-shadow-spread: -8px;
}

a {
  &:hover {
    text-decoration: none;
  }
  .logo {
    background: no-repeat center;
    background-size: contain;
    height: 160px;
    padding: 1em;

    @media (min-width: @screen-sm-min) {
      height: 300px;
    }
  }
}

a.dark-contrast {
  text-decoration: none;
  color: #dddddd;

  &:hover {
    color: #ffffff;
    text-decoration: none;
  }
}

// subtle header (like for ryankoval.com)
.subtle-header {
  font-family: 'Dosis', sans-serif !important;
  font-style: normal;
  font-weight: 300;
  font-size: 2.3em;
  text-transform: none;
  text-decoration: none;
  letter-spacing: -0.037em;
  word-spacing: -0.02em;
  line-height: 1.24;
}

.thumbnail-bottom {
  position: relative;
  height: 300px;
  img {
    bottom: 0px;
    max-height: 100%;
    margin: auto;
    padding: 25px 15px 0px 15px;
  }
}

.narrow-container {
  max-width: 900px;
  padding: 0 1.6em;
}

.description {
  position: relative;
  margin-top: 1em;

  &:before, &:after {
    position: absolute;
    font-size: 2.5em;
  }
  &:before {
    content: '\201C';
    left: -0.45em;
    top: -16px;
  }
  &:after {
    content: '\201D';
    right: -22px;
    bottom: -28px;
  }
}

.experience {
  h1, h2, h3, h4, h5 {
    small {
      &+small {
        padding-top: 0.15em;
      }
      display: block;
    }
  }
  h2 {
    small {
      font-size: 55%;
    }
  }
  .col-lg-4 > .thumbnail-bottom {
    height: 250px;
  }
  .row {
    padding-bottom: 15px;
  }

  .gutter {
    padding: 0 25px;
  }

  .caption h4 {
    margin-bottom: 0;
    &:last-of-type {
      margin-bottom: (@line-height-computed / 2);
    }
  }

  hr {
    margin-bottom: 1.5em;
    margin-top: 1.5em;
  }

  ul {
    list-style: none;

    li:before {
      font-family: 'FontAwesome';
      content: '\f101';
      margin:0 7px 0 -15px;
      font-size: 0.8em;
    }
  }


  .info {
    max-height: 290px;
    position: relative;
    overflow: hidden;

    .show-more {
      width: 100%;
      height: 150px;
      z-index: 99;
      position: absolute;
      bottom: 0px;
      background: url("/images/bottom-fade.png") bottom center repeat;
      a {
        position: absolute;
        bottom: 0px;
        width: 100%;
        text-align: center;
      }
    }
  }
}

.jumbotron {
  color: #FFFFFF;
  background: linear-gradient(rgba(40, 40, 40, 0.75), rgba(40, 40, 40, 0.75)), url("/images/jumbo.jpg") no-repeat;
  background-position: center center;
  background-size: cover;
  min-height: 650px;

  p {
    font-size: 1em;
    
    @media (min-width: @screen-xs-min) {
      font-size: 21px;
    }
  }
  .container {
    text-shadow: 2px 2px 8px #000000;
  }

  .headerFont() {
    font-family: 'Enriqueta', cursive;
    font-weight: 700;
  }

  h1 {
    .headerFont();
    text-shadow: 2px 3px #3F3F3F;
    font-size: 2.7em;
    @media (min-width: @screen-xs-min) {
      font-size: 3.95em;
    }
    @media (min-width: @screen-sm-min) {
      font-size: 3.95em;
    }
    @media (min-width: @screen-md-min) {
      font-size: 4.95em;
    }
    @media (min-width: @screen-lg-min) {
      font-size: 5.95em;
    }
    letter-spacing: -.025em;
  }
  h3 {
    .headerFont();
    font-size: 3em;
    color: #eee;
    margin-top: 0px;
    margin-bottom:20px;
    text-align: center;
  }

  a {
    display: inline-block;
    position: relative;
    color: inherit;

    &:after {
      content: '';
      position: absolute;
      left: 0;
      display: inline-block;
      height: 1em;
      width: 100%;
      border-bottom: 1px solid;
      margin-top: 6px;
    }

    &:hover {
      color: inherit;
    }
  }
}

a.icon {
  &:hover {
    text-decoration: none;
  }

  div.img {
    height: 4em;
    width: 100%;
    margin: 0.4em 0.4em 0.4em 0;
    background: no-repeat center;
    background-size: contain;

    @media (min-width: @screen-xs-min) {
      margin: 0.8em 0.8em 0.8em 0;
      height: 6em;
    }
    @media (min-width: @screen-sm-min) {
      height: 7em;
    }
    @media (min-width: @screen-lg-min) {
      height: 8em;
    }

  }
}

